# flightcrew

./: .appveyor.yml  .gitignore  .hgignore  .travis.yml  BuildingFromSource.md  CMakeLists.txt  ChangeLog.txt  CustomPCH.cmake  FAQ.md  INSTALL.txt  ProjectHome.md  README.txt  ReportingIssues.md  version.xml
src/FlightCrew/: CMakeLists.txt  DllExporting.h  ErrorIDs.h  ErrorMessages.cpp  ErrorMessages.h  Result.cpp  Result.h  ResultId.h  constants.h  exception.h  flightcrew.cpp  flightcrew.h  stdafx.h  validator_gen.py
src/FlightCrew-cli/: CMakeLists.txt  main.cpp
src/FlightCrew-gui/: CMakeLists.txt  Form.ui  MainWindow.cpp  MainWindow.h  UpdateChecker.cpp  UpdateChecker.h  main.cpp
src/FlightCrew-gui/resources/bash/: flightcrew-gui.sh
src/FlightCrew-gui/resources/mac/: MacOSXBundleInfo.plist
src/FlightCrew/Framework/: OpfValidatorsList.cpp  ValidateCss.cpp  ValidateEpub.cpp  ValidateNcx.cpp  ValidateOpf.cpp  ValidateXhtml.cpp  flightcrew_p.cpp  flightcrew_p.h
src/FlightCrew/Misc/: CustomAssert.cpp  CustomAssert.h  DetermineMimetype.cpp  ErrorResultCollector.cpp  ErrorResultCollector.h  TempFolder.cpp  TempFolder.h  ToXercesStringConverter.cpp  ToXercesStringConverter.h  Utilities.cpp  Utilities.h
src/FlightCrew/Schemas/AsSources/: Ops201Xsd.cpp
src/FlightCrew/StaticResources/: Xhtml11FlatDtd.cpp
src/FlightCrew/Validators/: AllowedChildrenValidator.cpp  AllowedChildrenValidator.h  AttributesPresentValidator.cpp  AttributesPresentValidator.h  CorrectElementCountValidator.cpp  CorrectElementCountValidator.h  DomSchemaValidator.cpp  ElementCountOneValidator.cpp  ElementCountOneValidator.h  ElementPresentValidator.cpp  ElementPresentValidator.h  IValidator.h  SaxSchemaValidator.cpp  SaxSchemaValidator.h  XmlValidator.cpp  XmlValidator.h
src/FlightCrew/Validators/Ncx/: ContentTargetsPresent.h
src/FlightCrew/Validators/Ocf/: ContainerListedOpfPresent.cpp  ContainerListsOpf.cpp  ContainerListsOpf.h  ContainerSatisfiesSchema.cpp  ContainerSatisfiesSchema.h  EncryptionSatisfiesSchema.cpp  EncryptionSatisfiesSchema.h  MetaInfValidator.cpp  MetaInfValidator.h  MimetypeBytesValid.cpp  SignaturesSatisfiesSchema.cpp  SignaturesSatisfiesSchema.h  WellFormedXml.cpp  WellFormedXml.h
src/FlightCrew/Validators/Opf/: ContributorAttributesPresent.cpp  ContributorAttributesPresent.h  CoverageAttributesPresent.cpp  CoverageAttributesPresent.h  CreatorAttributesPresent.cpp  CreatorAttributesPresent.h  CreatorOrContributorRoleValid.cpp  CreatorOrContributorRoleValid.h  DCMetadataAllowedChildren.cpp  DCMetadataAllowedChildren.h  DCMetadataAttributesPresent.cpp  DCMetadataAttributesPresent.h  DateAttributesPresent.cpp  DateAttributesPresent.h  DateValid.cpp  DateValid.h  DescriptionAttributesPresent.cpp  DescriptionAttributesPresent.h  FormatAttributesPresent.cpp  FormatAttributesPresent.h  GuideAllowedChildren.cpp  GuideAllowedChildren.h  GuideAttributesPresent.cpp  GuideAttributesPresent.h  IdentifierAttributesPresent.cpp  IdentifierAttributesPresent.h  IdentifierPresent.cpp  IdentifierPresent.h  IdsUnique.cpp  IdsUnique.h  IdsValid.cpp  IdsValid.h  ItemAttributesPresent.cpp  ItemAttributesPresent.h  ItemHrefUnique.cpp  ItemHrefUnique.h  ItemHrefValid.cpp  ItemHrefValid.h  ItemLinearValid.cpp  ItemLinearValid.h  (+88 more)
src/FlightCrew/Validators/Xhtml/: SatisfiesXhtmlSchema.cpp  SatisfiesXhtmlSchema.h
src/FlightCrew/Validators/Xml/: UsesUnicode.cpp  WellFormedXml.cpp
src/FlightCrew/XercesExtensions/: LocationAwareDOMParser.cpp  LocationAwareDOMParser.h  LocationInfo.h  LocationInfoDataHandler.cpp  LocationInfoDataHandler.h  NodeLocationInfo.h  ToXercesStringConverter.cpp  ToXercesStringConverter.h
src/FlightCrew/tests/: CMakeLists.txt  PackageIsRoot_test.cpp  TitlePresent_test.cpp  stdafx.cpp  stdafx_tests.cpp  stdafx_tests.h  test_main.cpp
src/FlightCrew/tests/framework_tests/: EpubValidates_test.cpp
src/FlightCrew/tests/misc_tests/: ConvertUtf8PathToBoostPath_test.cpp  DetermineMimetype_test.cpp  NormalizePath_test.cpp
src/FlightCrew/tests/ncx_tests/: ContentTargetsPresent_test.cpp  NcxSatisfiesSchema_test.cpp
src/FlightCrew/tests/ocf_tests/: ContainerListedOpfPresent_test.cpp  ContainerListsOpf_test.cpp  ContainerSatisfiesSchema_test.cpp  EncryptionSatisfiesSchema_test.cpp  MimetypeBytesValid_test.cpp  SignaturesSatisfiesSchema_test.cpp  WellFormedXml_test.cpp
src/FlightCrew/tests/opf_tests/: ContributorAttributesPresent_test.cpp  CoverageAttributesPresent_test.cpp  CreatorAttributesPresent_test.cpp  CreatorOrContributorRoleValid_test.cpp  DCMetadataAllowedChildren_test.cpp  DCMetadataAttributesPresent_test.cpp  DateAttributesPresent_test.cpp  DateValid_test.cpp  DescriptionAttributesPresent_test.cpp  FormatAttributesPresent_test.cpp  GuideAllowedChildren_test.cpp  GuideAttributesPresent_test.cpp  IdentifierAttributesPresent_test.cpp  IdentifierPresent_test.cpp  IdsUnique_test.cpp  IdsValid_test.cpp  ItemAttributesPresent_test.cpp  ItemFilesPresent_test.cpp  ItemHrefUnique_test.cpp  ItemHrefValid_test.cpp  ItemLinearValid_test.cpp  ItemMediaTypeValid_test.cpp  ItemPresent_test.cpp  ItemReqModsOnlyWithReqNS_test.cpp  ItemrefAttributesPresent_test.cpp  ItemrefIdrefUnique_test.cpp  ItemrefIdrefValid_test.cpp  ItemrefPresent_test.cpp  LanguagePresent_test.cpp  ManifestAllowedChildren_test.cpp  ManifestAttributesPresent_test.cpp  ManifestPresent_test.cpp  MetaAttributesPresent_test.cpp  MetadataAllowedChildren_test.cpp  MetadataAttributesPresent_test.cpp  MetadataPresent_test.cpp  NcxPresent_test.cpp  OneManifest_test.cpp  OneMetadata_test.cpp  OneSpine_test.cpp  (+27 more)
src/FlightCrew/tests/test_data/: PackageIsRoot_PackageNotRoot.xml  TitlePresent_NoTitle.xml
src/FlightCrew/tests/test_data/framework_tests/: EpubValidates_MissingTitle.epub  (+4 more)
src/FlightCrew/tests/xhtml_tests/: SatisfiesXhtmlSchema_test.cpp  UsesCorrectDtd_test.cpp
src/FlightCrew/tests/xml_tests/: UsesUnicode_test.cpp  WellFormedXml_test.cpp
src/Xerces/: CMakeLists.txt  sigil_changes.txt
src/Xerces/xercesc/util/: XMLUTF8Transcoder.cpp  XMLUTF8Transcoder.hpp  XercesDefs.hpp  Xerces_autoconf_config.mingw.hpp
(+270 files in other folders)
